# Shooting.io

./: README.md
src/: CMakeLists.txt  game_server.cpp  http_message.cpp  http_message.h  websocket_service.cpp  websocket_service.h
src/gameWorld/: CMakeLists.txt  game.cpp  maps.hpp  physical_object.hpp  world.cpp
static/: gameView.js  index.html  inputController.js
